feat: final adjustments